# egg

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  todo.md
.cargo/: config.toml
.claude/: settings.local.json
src/: App.css  App.tsx  bookmarks.rs  cache.rs  config.rs  execute.rs  indexer.rs  main.rs  models.rs  search_core.rs  state.rs  text_utils.rs  tui.rs  types.ts  windows_utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  hotkey.rs  hotkey_capture.rs  indexer.rs  lib.rs  models.rs  state.rs  windows_utils.rs
src/components/: LauncherWindow.tsx  ModeStrip.tsx  PreviewPane.tsx  ResultList.tsx  SearchBar.tsx  SettingsWindow.tsx  Toast.tsx
src/constants/: events.ts  modes.ts
src/state/: launcherReducer.ts
src/styles/: base.css  theme-dark.css
src/utils/: fallbackIcon.ts  theme.ts
xtask/: Cargo.toml
xtask/src/: main.rs
