[package]
name = "egg-cli"
version = "0.1.0"
description = "Command-line launcher for Windows applications"
authors = ["egg"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dirs = "5"
open = "5"
env_logger = "0.11"
anyhow = "1"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
urlencoding = "2"
sha1 = "0.10"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_Environment",
    "Win32_System_SystemServices",
] }
log = "0.4"
pinyin = "0.10"
